--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiodns==1.2.0
 aiohttp==3.5.4
+apscheduler==3.5.3
 async-timeout==3.0.1
 attrs==18.2.0
 cchardet==2.1.4
@@ -9,11 +10,14 @@ cssselect==1.0.3
 idna==2.8
 lxml==4.3.0
 multidict==4.5.2
-psycopg2-binary==2.7.6.1
+psycopg2-binary==2.7.7
 pycares==2.4.0
 pyquery==1.4.0
+pytz==2018.9
 requests==2.21.0
-sqlalchemy==1.2.16
+six==1.12.0
+sqlalchemy==1.2.17
 typing==3.6.6
+tzlocal==1.5.1
 urllib3==1.24.1
 yarl==1.3.0
