--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
-aiodns==1.2.0
+aiodns==2.0.0
 aiohttp==3.5.4
 apscheduler==3.5.3
 async-timeout==3.0.1
-attrs==18.2.0
+attrs==19.1.0
 cchardet==2.1.4
 certifi==2018.11.29
+cffi==1.12.2
 chardet==3.0.4
 cssselect==1.0.3
 idna==2.8
-lxml==4.3.0
+lxml==4.3.2
 multidict==4.5.2
 psycopg2-binary==2.7.7
-pycares==2.4.0
+pycares==3.0.0
+pycparser==2.19
 pyquery==1.4.0
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
-sqlalchemy==1.2.17
-typing==3.6.6
+sqlalchemy==1.3.0
 tzlocal==1.5.1
 urllib3==1.24.1
 yarl==1.3.0
