--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiodns==2.0.0
 aiohttp==3.5.4
 apscheduler==3.6.0
 async-timeout==3.0.1
+atomicwrites==1.3.0
 attrs==19.1.0
 cchardet==2.1.4
 certifi==2019.3.9
@@ -9,16 +10,25 @@ cffi==1.12.3
 chardet==3.0.4
 cssselect==1.0.3
 idna==2.8
-lxml==4.3.3
+importlib-metadata==0.18
+lxml==4.3.4
+more-itertools==7.0.0 ; python_version > '2.7'
 multidict==4.5.2
-psycopg2-binary==2.8.2
+packaging==19.0
+pluggy==0.12.0
+psycopg2-binary==2.8.3
+py==1.8.0
 pycares==3.0.0
 pycparser==2.19
+pyparsing==2.4.0
 pyquery==1.4.0
+pytest==4.6.3
 pytz==2019.1
-requests==2.21.0
+requests==2.22.0
 six==1.12.0
-sqlalchemy==1.3.3
+sqlalchemy==1.3.4
 tzlocal==1.5.1
-urllib3==1.24.2
+urllib3==1.25.3
+wcwidth==0.1.7
 yarl==1.3.0
+zipp==0.5.1
