--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ async-timeout==3.0.1
 atomicwrites==1.3.0
 attrs==19.1.0
 cchardet==2.1.4
-certifi==2019.3.9
+certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 cssselect==1.0.3
 idna==2.8
 importlib-metadata==0.18
 lxml==4.3.4
-more-itertools==7.0.0 ; python_version > '2.7'
+more-itertools==7.1.0
 multidict==4.5.2
 packaging==19.0
 pluggy==0.12.0
@@ -22,13 +22,13 @@ pycares==3.0.0
 pycparser==2.19
 pyparsing==2.4.0
 pyquery==1.4.0
-pytest==4.6.3
+pytest==5.0.1
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
-sqlalchemy==1.3.4
+sqlalchemy==1.3.5
 tzlocal==1.5.1
 urllib3==1.25.3
 wcwidth==0.1.7
 yarl==1.3.0
-zipp==0.5.1
+zipp==0.5.2
