--- a/requirements.txt
+++ b/requirements.txt
@@ -10,20 +10,21 @@ cffi==1.12.3
 chardet==3.0.4
 cssselect==1.0.3
 idna==2.8
-importlib-metadata==0.18
-lxml==4.3.4
+importlib-metadata==0.19
+lxml==4.4.0
 more-itertools==7.2.0
 multidict==4.5.2
-packaging==19.0
+packaging==19.1
 pluggy==0.12.0
 psycopg2-binary==2.8.3
 py==1.8.0
 pycares==3.0.0
 pycparser==2.19
-pyparsing==2.4.1.1
+pyparsing==2.4.2
 pyquery==1.4.0
+pytest-asyncio==0.10.0
 pytest==5.0.1
-pytz==2019.1
+pytz==2019.2
 requests==2.22.0
 six==1.12.0
 sqlalchemy==1.3.6
