--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ dist: xenial   # required for Python >= 3.7
 language: python
 python:
   - "3.7"
-install: pip install --user -r requirements.txt
-script: pytest
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
