--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ cchardet==2.1.4
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
-cssselect==1.0.3
+cssselect==1.1.0
 idna==2.8
-importlib-metadata==0.19
-lxml==4.4.0
+importlib-metadata==0.19 ; python_version < '3.8'
+lxml==4.4.1
 more-itertools==7.2.0
 multidict==4.5.2
 packaging==19.1
@@ -23,11 +23,11 @@ pycparser==2.19
 pyparsing==2.4.2
 pyquery==1.4.0
 pytest-asyncio==0.10.0
-pytest==5.0.1
+pytest==5.1.0
 pytz==2019.2
 requests==2.22.0
 six==1.12.0
-sqlalchemy==1.3.6
+sqlalchemy==1.3.7
 tzlocal==2.0.0
 urllib3==1.25.3
 wcwidth==0.1.7
