--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,33 @@
 aiodns==2.0.0
 aiohttp==3.6.2
 apscheduler==3.6.3
-async-timeout==3.0.1
-attrs==19.3.0
+async-timeout==3.0.1; python_full_version >= '3.5.3'
+attrs==20.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cchardet==2.1.6
-certifi==2020.4.5.1
-cffi==1.14.0
+certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
-cssselect==1.1.0
-idna==2.9
-importlib-metadata==1.6.0; python_version < '3.8'
-lxml==4.5.1
-more-itertools==8.3.0
-multidict==4.7.6
-packaging==20.4
-pluggy==0.13.1
+cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+iniconfig==1.0.1
+lxml==4.5.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+more-itertools==8.4.0; python_version >= '3.5'
+multidict==4.7.6; python_version >= '3.5'
+packaging==20.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 psycopg2-binary==2.8.5
-py==1.8.1
+py==1.9.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pycares==3.1.1
-pycparser==2.20
-pyparsing==2.4.7
+pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyquery==1.4.1
-pytest-asyncio==0.12.0
-pytest==5.4.2
+pytest-asyncio==0.14.0
+pytest==6.0.1
 pytz==2020.1
-requests==2.23.0
-six==1.15.0
-sqlalchemy==1.3.17
+requests==2.24.0
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlalchemy==1.3.19
+toml==0.10.1
 tzlocal==2.1
-urllib3==1.25.9
-wcwidth==0.1.9
-yarl==1.4.2
-zipp==3.1.0
+urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+yarl==1.5.1; python_version >= '3.5'
