--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 aiodns==2.0.0
-aiohttp==3.6.2
+aiohttp==3.7.3
 apscheduler==3.6.3
 async-timeout==3.0.1; python_full_version >= '3.5.3'
-attrs==20.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-cchardet==2.1.6
-certifi==2020.6.20
-cffi==1.14.2
+attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+cchardet==2.1.7
+certifi==2020.12.5
+cffi==1.14.4
 chardet==3.0.4
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-iniconfig==1.0.1
-lxml==4.5.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-more-itertools==8.5.0; python_version >= '3.5'
-multidict==4.7.6; python_version >= '3.5'
-packaging==20.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+iniconfig==1.1.1
+lxml==4.6.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+multidict==5.1.0; python_version >= '3.6'
+packaging==20.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-psycopg2-binary==2.8.5
+psycopg2-binary==2.8.6
 py==1.9.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pycares==3.1.1
 pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyquery==1.4.1
+pyquery==1.4.3
 pytest-asyncio==0.14.0
-pytest==6.0.1
-pytz==2020.1
-requests==2.24.0
+pytest==6.1.2
+pytz==2020.4
+requests==2.25.0
 six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.3.19
-toml==0.10.1
+sqlalchemy==1.3.20
+toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+typing-extensions==3.7.4.3
 tzlocal==2.1
-urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-yarl==1.5.1; python_version >= '3.5'
+urllib3==1.26.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+yarl==1.6.3; python_version >= '3.6'
