--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,11 @@ pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyquery==1.4.3
 pytest-asyncio==0.15.1
-pytest==6.2.4
+pytest==6.2.4; python_version >= '3.6'
 pytz==2021.1
 requests==2.25.1
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.18
+sqlalchemy==1.4.19
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typing-extensions==3.10.0.0
 tzlocal==2.1
