--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@ cchardet==2.1.7
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+charset-normalizer==2.0.3; python_version >= '3'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 greenlet==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+idna==3.2; python_version >= '3'
 iniconfig==1.1.1
 lxml==4.6.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multidict==5.1.0; python_version >= '3.6'
@@ -24,9 +25,9 @@ pyquery==1.4.3
 pytest-asyncio==0.15.1
 pytest==6.2.4; python_version >= '3.6'
 pytz==2021.1
-requests==2.25.1
+requests==2.26.0
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.20
+sqlalchemy==1.4.22
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typing-extensions==3.10.0.0
 tzlocal==2.1
