--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ iniconfig==1.1.1
 lxml==4.6.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multidict==5.1.0; python_version >= '3.6'
 packaging==21.0; python_version >= '3.6'
-pluggy==0.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pluggy==1.0.0; python_version >= '3.6'
 psycopg2-binary==2.9.1
 py==1.10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pycares==4.0.0
@@ -23,13 +23,13 @@ pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyquery==1.4.3
 pytest-asyncio==0.15.1
-pytest==6.2.4; python_version >= '3.6'
+pytest==6.2.5; python_version >= '3.6'
 pytz==2021.1
 requests==2.26.0
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.22
+sqlalchemy==1.4.23
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typing-extensions==3.10.0.0
+typing-extensions==3.10.0.2
 tzlocal==2.1
 urllib3==1.26.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 yarl==1.6.3; python_version >= '3.6'
