--- a/requirements.txt
+++ b/requirements.txt
@@ -15,20 +15,20 @@ idna==3.3; python_version >= '3'
 iniconfig==1.1.1
 lxml==4.6.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multidict==5.2.0; python_version >= '3.6'
-packaging==21.2; python_version >= '3.6'
+packaging==21.3; python_version >= '3.6'
 pluggy==1.0.0; python_version >= '3.6'
 psycopg2-binary==2.9.2
 py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pycares==4.1.2
 pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==3.0.6; python_version >= '3.6'
 pyquery==1.4.3
 pytest-asyncio==0.16.0
 pytest==6.2.5; python_version >= '3.6'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2021.3
 requests==2.26.0
-setuptools==59.1.0; python_version >= '3.6'
+setuptools==59.2.0; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.27
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
