--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ attrs==21.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2,
 cchardet==2.1.7
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.8; python_full_version >= '3.5.0'
+charset-normalizer==2.0.8; python_version >= '3'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 frozenlist==1.2.0; python_version >= '3.6'
 greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
@@ -32,7 +32,7 @@ setuptools==59.4.0; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.27
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typing-extensions==4.0.0; python_version >= '3.6'
+typing-extensions==4.0.1; python_version >= '3.6'
 tzdata==2021.5; python_version >= '3.6'
 tzlocal==4.1; python_version >= '3.6'
 urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
