--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ attrs==21.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2,
 cchardet==2.1.7
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.8; python_version >= '3'
+charset-normalizer==2.0.9; python_full_version >= '3.5.0'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 frozenlist==1.2.0; python_version >= '3.6'
 greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
