--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ attrs==21.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2,
 cchardet==2.1.7
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9; python_full_version >= '3.5.0'
+charset-normalizer==2.0.9; python_version >= '3'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 frozenlist==1.2.0; python_version >= '3.6'
 greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 idna==3.3; python_version >= '3'
 iniconfig==1.1.1
-lxml==4.6.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+lxml==4.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multidict==5.2.0; python_version >= '3.6'
 packaging==21.3; python_version >= '3.6'
 pluggy==1.0.0; python_version >= '3.6'
@@ -28,9 +28,9 @@ pytest==6.2.5; python_version >= '3.6'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2021.3
 requests==2.26.0
-setuptools==59.4.0; python_version >= '3.6'
+setuptools==59.6.0; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.27
+sqlalchemy==1.4.28
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typing-extensions==4.0.1; python_version >= '3.6'
 tzdata==2021.5; python_version >= '3.6'
