--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ aiohttp==3.8.1
 aiosignal==1.2.0; python_version >= '3.6'
 apscheduler==3.8.1
 async-timeout==4.0.2; python_version >= '3.6'
-attrs==21.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 cchardet==2.1.7
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9; python_version >= '3'
+charset-normalizer==2.0.9; python_full_version >= '3.5.0'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 frozenlist==1.2.0; python_version >= '3.6'
 greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
@@ -17,7 +17,7 @@ lxml==4.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 multidict==5.2.0; python_version >= '3.6'
 packaging==21.3; python_version >= '3.6'
 pluggy==1.0.0; python_version >= '3.6'
-psycopg2-binary==2.9.2
+psycopg2-binary==2.9.3
 py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pycares==4.1.2
 pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -28,7 +28,7 @@ pytest==6.2.5; python_version >= '3.6'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2021.3
 requests==2.26.0
-setuptools==60.1.1; python_version >= '3.7'
+setuptools==60.2.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.29
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
