--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
 - pip install -r requirements.txt
 script:
 - pytest
+before_deploy:
+  - rvm $(travis_internal_ruby) --fuzzy do ruby -S gem install faraday -v 1.8.0
 deploy:
   provider: heroku
   api_key:
