--- a/requirements.txt
+++ b/requirements.txt
@@ -23,15 +23,15 @@ pycares==4.1.2
 pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==3.0.7; python_version >= '3.6'
 pyquery==1.4.3
-pytest-asyncio==0.17.2
-pytest==6.2.5; python_version >= '3.6'
+pytest-asyncio==0.18.0
+pytest==7.0.0; python_version >= '3.6'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2021.3
 requests==2.27.1
-setuptools==60.6.0; python_version >= '3.7'
+setuptools==60.8.1; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.31
-toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tomli==2.0.0; python_version >= '3.7'
 tzdata==2021.5; python_version >= '3.6'
 tzlocal==4.1; python_version >= '3.6'
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
