--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2,
 cchardet==2.1.7
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.12; python_full_version >= '3.5.0'
+charset-normalizer==2.0.12; python_version >= '3'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 frozenlist==1.3.0; python_version >= '3.7'
 greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
@@ -24,15 +24,15 @@ pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pyparsing==3.0.7; python_version >= '3.6'
 pyquery==1.4.3
 pytest-asyncio==0.18.2
-pytest==7.1.0; python_version >= '3.7'
+pytest==7.1.1; python_version >= '3.7'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2021.3
 requests==2.27.1
-setuptools==60.9.3; python_version >= '3.7'
+setuptools==60.10.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.32
 tomli==2.0.1; python_version >= '3.7'
-tzdata==2021.5; python_version >= '3.6'
+tzdata==2022.1; python_version >= '3.6'
 tzlocal==4.1; python_version >= '3.6'
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 yarl==1.7.2; python_version >= '3.6'
