--- a/requirements.txt
+++ b/requirements.txt
@@ -21,18 +21,18 @@ psycopg2-binary==2.9.3
 py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pycares==4.1.2
 pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyparsing==3.0.7; python_version >= '3.6'
+pyparsing==3.0.8; python_full_version >= '3.6.8'
 pyquery==1.4.3
 pytest-asyncio==0.18.3
-pytest==7.1.1; python_version >= '3.7'
+pytest==7.1.2; python_version >= '3.7'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2022.1
 requests==2.27.1
-setuptools==61.2.0; python_version >= '3.7'
+setuptools==62.1.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.32
+sqlalchemy==1.4.36
 tomli==2.0.1; python_version >= '3.7'
 tzdata==2022.1; python_version >= '3.6'
-tzlocal==4.1; python_version >= '3.6'
+tzlocal==4.2; python_version >= '3.6'
 urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 yarl==1.7.2; python_version >= '3.6'
