--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,20 @@ apscheduler==3.9.1
 async-timeout==4.0.2; python_version >= '3.6'
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 cchardet==2.1.7
-certifi==2022.5.18.1; python_version >= '3.6'
-cffi==1.15.0
-charset-normalizer==2.0.12; python_version >= '3.5'
+certifi==2022.6.15; python_version >= '3.6'
+cffi==1.15.1
+charset-normalizer==2.1.0; python_version >= '3.6'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 frozenlist==1.3.0; python_version >= '3.7'
 idna==3.3; python_version >= '3.5'
 iniconfig==1.1.1
-lxml==4.9.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+lxml==4.9.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multidict==6.0.2; python_version >= '3.7'
 packaging==21.3; python_version >= '3.6'
 pluggy==1.0.0; python_version >= '3.6'
 psycopg2-binary==2.9.3
 py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-pycares==4.1.2
+pycares==4.2.1
 pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==3.0.9; python_full_version >= '3.6.8'
 pyquery==1.4.3
@@ -26,12 +26,12 @@ pytest-asyncio==0.18.3
 pytest==7.1.2; python_version >= '3.7'
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pytz==2022.1
-requests==2.28.0
-setuptools==62.4.0; python_version >= '3.7'
+requests==2.28.1
+setuptools==63.1.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.37
+sqlalchemy==1.4.39
 tomli==2.0.1; python_version >= '3.7'
 tzdata==2022.1; python_version >= '3.6'
 tzlocal==4.2; python_version >= '3.6'
-urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
 yarl==1.7.2; python_version >= '3.6'
