--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,14 @@ aiohttp==3.8.1
 aiosignal==1.2.0; python_version >= '3.6'
 apscheduler==3.9.1
 async-timeout==4.0.2; python_version >= '3.6'
-attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+attrs==22.1.0; python_version >= '3.5'
 cchardet==2.1.7
-certifi==2022.6.15; python_version >= '3.6'
+certifi==2022.9.14; python_version >= '3.6'
 cffi==1.15.1
-charset-normalizer==2.1.0; python_version >= '3.6'
+charset-normalizer==2.1.1; python_version >= '3.6'
 cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-frozenlist==1.3.0; python_version >= '3.7'
-idna==3.3; python_version >= '3.5'
+frozenlist==1.3.1; python_version >= '3.7'
+idna==3.4; python_version >= '3.5'
 iniconfig==1.1.1
 lxml==4.9.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 multidict==6.0.2; python_version >= '3.7'
@@ -18,20 +18,20 @@ packaging==21.3; python_version >= '3.6'
 pluggy==1.0.0; python_version >= '3.6'
 psycopg2-binary==2.9.3
 py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-pycares==4.2.1
+pycares==4.2.2
 pycparser==2.21; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyparsing==3.0.9; python_full_version >= '3.6.8'
 pyquery==1.4.3
-pytest-asyncio==0.18.3
-pytest==7.1.2; python_version >= '3.7'
+pytest==7.1.3; python_version >= '3.7'
+pytest-asyncio==0.19.0
+pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-pytz==2022.1
 requests==2.28.1
-setuptools==63.1.0; python_version >= '3.7'
+setuptools==65.3.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.39
+sqlalchemy==1.4.41
 tomli==2.0.1; python_version >= '3.7'
-tzdata==2022.1; python_version >= '3.6'
+tzdata==2022.2; python_version >= '3.6'
 tzlocal==4.2; python_version >= '3.6'
-urllib3==1.26.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
-yarl==1.7.2; python_version >= '3.6'
+urllib3==1.26.12; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
+yarl==1.8.1; python_version >= '3.7'
