--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,49 @@
 aiodns==3.0.0
 aiohttp==3.8.3
-aiosignal==1.2.0 ; python_version >= '3.6'
-apscheduler==3.9.1
+aiosignal==1.3.1 ; python_version >= '3.7'
 async-timeout==4.0.2 ; python_version >= '3.6'
 attrs==22.1.0 ; python_version >= '3.5'
 cachetools==5.2.0 ; python_version ~= '3.7'
 cchardet==2.1.7
-certifi==2022.9.24 ; python_version >= '3.6'
+certifi==2022.12.7 ; python_version >= '3.6'
 cffi==1.15.1
-charset-normalizer==2.1.1 ; python_version >= '3.6'
+charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
 click==8.1.3 ; python_version >= '3.7'
-cssselect==1.1.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+cssselect==1.2.0 ; python_version >= '3.7'
+exceptiongroup==1.0.4 ; python_version < '3.11'
 flask==2.2.2
-frozenlist==1.3.1 ; python_version >= '3.7'
-google-api-core[grpc]==2.10.1 ; python_version >= '3.7'
-google-auth==2.11.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+frozenlist==1.3.3 ; python_version >= '3.7'
+google-api-core[grpc]==2.11.0 ; python_version >= '3.7'
+google-auth==2.15.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 google-cloud-core==2.3.2 ; python_version >= '3.7'
-google-cloud-firestore==2.7.0
-googleapis-common-protos==1.56.4 ; python_version >= '3.7'
-grpcio==1.49.1
-grpcio-status==1.49.1
+google-cloud-firestore==2.7.3
+googleapis-common-protos==1.57.0 ; python_version >= '3.7'
+grpcio==1.51.1
+grpcio-status==1.51.1
 idna==3.4 ; python_version >= '3.5'
-importlib-metadata==4.12.0 ; python_version < '3.10'
+importlib-metadata==5.1.0 ; python_version < '3.10'
 iniconfig==1.1.1
 itsdangerous==2.1.2 ; python_version >= '3.7'
 jinja2==3.1.2 ; python_version >= '3.7'
 lxml==4.9.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 markupsafe==2.1.1 ; python_version >= '3.7'
-multidict==6.0.2 ; python_version >= '3.7'
-packaging==21.3 ; python_version >= '3.6'
+multidict==6.0.3 ; python_version >= '3.7'
+packaging==22.0 ; python_version >= '3.7'
 pluggy==1.0.0 ; python_version >= '3.6'
 proto-plus==1.22.1 ; python_version >= '3.6'
-protobuf==4.21.6 ; python_version >= '3.7'
-py==1.11.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+protobuf==4.21.11 ; python_version >= '3.7'
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycares==4.2.2
 pycparser==2.21
-pyparsing==3.0.9 ; python_full_version >= '3.6.8'
 pyquery==1.4.3
-pytest==7.1.3 ; python_version >= '3.7'
-pytest-asyncio==0.19.0
-pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+pytest==7.2.0 ; python_version >= '3.7'
+pytest-asyncio==0.20.3
 requests==2.28.1
 rsa==4.9 ; python_version >= '3.6'
-setuptools==65.4.0 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-tomli==2.0.1 ; python_version >= '3.7'
-tzdata==2022.2 ; python_version >= '3.6'
-tzlocal==4.2 ; python_version >= '3.6'
-urllib3==1.26.12 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
+tomli==2.0.1 ; python_version < '3.11'
+urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 werkzeug==2.2.2 ; python_version >= '3.7'
-yarl==1.8.1 ; python_version >= '3.7'
-zipp==3.8.1 ; python_version >= '3.7'
+yarl==1.8.2 ; python_version >= '3.7'
+zipp==3.11.0 ; python_version >= '3.7'
