--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,49 @@
 aiodns==3.0.0
-aiohttp==3.8.3
+aiohttp==3.8.4
 aiosignal==1.3.1 ; python_version >= '3.7'
 async-timeout==4.0.2 ; python_version >= '3.6'
 attrs==22.2.0 ; python_version >= '3.6'
-cachetools==5.2.0 ; python_version ~= '3.7'
+cachetools==5.3.0 ; python_version ~= '3.7'
 cchardet==2.1.7
 certifi==2022.12.7 ; python_version >= '3.6'
 cffi==1.15.1
-charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
+charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
 click==8.1.3 ; python_version >= '3.7'
 cssselect==1.2.0 ; python_version >= '3.7'
-exceptiongroup==1.1.0 ; python_version < '3.11'
-flask==2.2.2
+exceptiongroup==1.1.1 ; python_version < '3.11'
+flask==2.2.3
 frozenlist==1.3.3 ; python_version >= '3.7'
 google-api-core[grpc]==2.11.0 ; python_version >= '3.7'
-google-auth==2.15.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+google-auth==2.17.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 google-cloud-core==2.3.2 ; python_version >= '3.7'
-google-cloud-firestore==2.7.3
-googleapis-common-protos==1.57.0 ; python_version >= '3.7'
-grpcio==1.51.1
-grpcio-status==1.51.1
+google-cloud-firestore==2.10.1
+googleapis-common-protos==1.59.0 ; python_version >= '3.7'
+grpcio==1.53.0
+grpcio-status==1.53.0
 idna==3.4 ; python_version >= '3.5'
-importlib-metadata==5.2.0 ; python_version < '3.10'
-iniconfig==1.1.1
+importlib-metadata==6.1.0 ; python_version < '3.10'
+iniconfig==2.0.0 ; python_version >= '3.7'
 itsdangerous==2.1.2 ; python_version >= '3.7'
 jinja2==3.1.2 ; python_version >= '3.7'
 lxml==4.9.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-markupsafe==2.1.1 ; python_version >= '3.7'
+markupsafe==2.1.2 ; python_version >= '3.7'
 multidict==6.0.4 ; python_version >= '3.7'
-packaging==22.0 ; python_version >= '3.7'
+packaging==23.0 ; python_version >= '3.7'
 pluggy==1.0.0 ; python_version >= '3.6'
-proto-plus==1.22.1 ; python_version >= '3.6'
-protobuf==4.21.12 ; python_version >= '3.7'
+proto-plus==1.22.2 ; python_version >= '3.6'
+protobuf==4.22.1 ; python_version >= '3.7'
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycares==4.3.0
 pycparser==2.21
 pyquery==2.0.0
-pytest==7.2.0 ; python_version >= '3.7'
-pytest-asyncio==0.20.3
-requests==2.28.1
+pytest==7.2.2 ; python_version >= '3.7'
+pytest-asyncio==0.21.0
+requests==2.28.2
 rsa==4.9 ; python_version >= '3.6'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 tomli==2.0.1 ; python_version < '3.11'
-urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-werkzeug==2.2.2 ; python_version >= '3.7'
+urllib3==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+werkzeug==2.2.3 ; python_version >= '3.7'
 yarl==1.8.2 ; python_version >= '3.7'
-zipp==3.11.0 ; python_version >= '3.7'
+zipp==3.15.0 ; python_version >= '3.7'
