--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiodns==3.2.0
-aiohappyeyeballs==2.4.2
+aiohappyeyeballs==2.4.3
 aiohttp==3.10.8
 aiosignal==1.3.1
 attrs==24.2.0
@@ -28,6 +28,7 @@ MarkupSafe==2.1.5
 multidict==6.1.0
 packaging==24.1
 pluggy==1.5.0
+prettytable==3.11.0
 proto-plus==1.24.0
 protobuf==5.28.2
 pyasn1==0.6.1
@@ -40,5 +41,6 @@ pytest-asyncio==0.24.0
 requests==2.32.3
 rsa==4.9
 urllib3==2.2.3
+wcwidth==0.2.13
 Werkzeug==3.0.4
 yarl==1.13.1
